# ws-direct

./: .gitignore  dune-project  ws-direct-core.opam  ws-direct-eio.opam  ws-direct-gluten.opam
autobahn/: README.md  fuzzingclient.json
lib/core/: close_code.ml  close_code.mli  connection.ml  connection.mli  dune  endpoint.ml  endpoint.mli  frame.ml  frame.mli  utf8.ml  utf8.mli
lib/eio/: client.ml  client.mli  driver.ml  driver.mli  dune  handshake.ml  handshake.mli  server.ml  server.mli
lib/gluten/: dune  ws_direct_gluten.ml
test/: dune  test_client_eio.ml  test_connection.ml  test_driver_writer.ml  test_endpoint.ml  test_frame.ml  test_handshake.ml  test_utf8.ml
